# cuda-histogram-equalization

./: CMakeLists.txt  README.md
include/: ChronoCPU.hpp  ChronoGPU.hpp  Equalizer.hpp  Image.hpp  Utils.hpp
src/: ChronoCPU.cpp  ChronoGPU.cu  Equalizer.cu  Image.cpp  main.cpp
