CMAKE_MINIMUM_REQUIRED(VERSION 3.8 FATAL_ERROR)

PROJECT(GPGPU LANGUAGES CXX CUDA)

SET(CMAKE_CUDA_STANDARD 11)
SET(CMAKE_CUDA_STANDARD_REQUIRED ON)

SET(SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/)
SET(INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include/)
SET(LIBS_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/libs/include/)

FIND_PACKAGE(CUDA REQUIRED)

INCLUDE_DIRECTORIES(
    ${CUDA_INCLUDE_DIRS}
    ${LIBS_INCLUDE_DIRS}
    ${INCLUDE_DIRS}
)

FILE(GLOB_RECURSE SOURCE_FILES ${SOURCE_DIR}*.cpp)
FILE(GLOB_RECURSE CUDA_FILES ${SOURCE_DIR}*.cu)
FILE(GLOB_RECURSE INCLUDE_FILES ${INCLUDE_DIR}*.hpp)

SET(TARGET_NAME equalization)
ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE_FILES} ${INCLUDE_FILES} ${CUDA_FILES})
SET(
    CUDA_NVCC_FLAGS
    ${CUDA_NVCC_FLAGS}
    -O3
    -gencode arch=compute_60,code=sm_60
)
